# qc_train_phi

./: ft.py  main.py  pyproject.toml
data/: alpaca_sample.json
docs/: eager_vs_flash_attention.md  fine-training.md  m2_phi3_finetuning_guide.md  origin.md  package-explanation.md  summary.md  tokenizer_and_attention.md  uv-package-management.md
