[project]
name = "qc-train-phi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
    "datasets>=4.4.1",
    "transformers>=4.46.0", # 显式声明transformers，确保版本可控
    "peft>=0.18.0",
    "trl>=0.25.1",
    "black>=25.11.0",
    "ruff>=0.14.6",
    "isort>=7.0.0",
]
